--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -27,7 +27,6 @@
             <td>Название</td>
             <td>Цена</td>
             <td></td>
-            <td></td>
         </tr>
         </thead>
         <tbody>
@@ -37,9 +36,6 @@
             <td>{{p.price}}</td>
             <td>
                 <button class="btn btn-danger" ng-click="deleteProduct(p.id)">Удалить</button>
-            </td>
-            <td>
-                <button class="btn btn-primary" ng-click="addProductToShoppingCart(p)">Добавить в корзину</button>
             </td>
         </tr>
         </tbody>
@@ -55,28 +51,12 @@
             <input type="number" class="form-control" id="newProductPrice" ng-model="newProduct.price" placeholder="Цена">
         </div>
         <div class="col-auto">
+            <input type="text" class="form-control" id="newProductCategoryTitle" ng-model="newProduct.categoryTitle" placeholder="Название категории">
+        </div>
+        <div class="col-auto">
             <button type="submit" class="btn btn-primary mb-3">Создать</button>
         </div>
     </form>
-    <p></p>
-    <h3>Корзина</h3>
-    <p></p>
-    <table class="table table-hover">
-        <thead>
-        <tr>
-            <td>ID</td>
-            <td>Название</td>
-            <td>Цена</td>
-        </tr>
-        </thead>
-        <tbody>
-        <tr ng-repeat="i in items">
-            <td>{{i.product_id.id}}</td>
-            <td>{{i.product_id.title}}</td>
-            <td>{{i.product_id.price}}</td>
-        </tr>
-        </tbody>
-    </table>
 </div>
 </body>
 </html>
