--- a/front-service/src/main/resources/static/index.html
+++ b/front-service/src/main/resources/static/index.html
@@ -10,7 +10,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.0/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.11/ngStorage.min.js"></script>
-    <script src="index.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.0/angular-route.min.js"></script>
 </head>
 
 <body>
@@ -20,9 +20,20 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">March Market</a>
+                    <a class="nav-link" href="#!/">March Market</a>
                 </li>
-
+                <li class="nav-item">
+                    <a class="nav-link" href="#!/store">Каталог товаров</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#!/cart">Корзина</a>
+                </li>
+                <li class="nav-item" ng-show="isUserLoggedIn()">
+                    <a class="nav-link" href="#!/orders">Мои заказы</a>
+                </li>
+                <li class="nav-item" ng-show="!isUserLoggedIn()">
+                    <a class="nav-link" href="#!/register">Регистрация</a>
+                </li>
                 <li class="nav-item" ng-show="!isUserLoggedIn()">
                     <form class="align-middle" ng-submit="tryToAuth()">
                         <div class="input-group input-group-sm" style="padding: 4px;">
@@ -44,81 +55,14 @@
             </ul>
         </div>
     </nav>
+    <ng-view></ng-view>
 
-    <p></p>
-    <h1>March Market</h1>
-    <p></p>
-    <h3>Список товаров</h3>
-    <p></p>
-    <table class="table table-hover">
-        <thead>
-        <tr>
-            <td>ID</td>
-            <td>Название</td>
-            <td>Цена</td>
-            <td></td>
-            <td></td>
-        </tr>
-        </thead>
-        <tbody>
-        <tr ng-repeat="p in products">
-            <td>{{p.id}}</td>
-            <td>{{p.title}}</td>
-            <td>{{p.price}}</td>
-            <td>
-                <button class="btn btn-danger" ng-click="deleteProduct(p.id)">Удалить</button>
-            </td>
-            <td>
-                <button class="btn btn-primary" ng-click="addProductToShoppingCart(p.id)">Добавить в корзину</button>
-            </td>
-        </tr>
-        </tbody>
-    </table>
-    <p></p>
-    <h3>Добавить продукт</h3>
-    <p></p>
-    <form class="row g-3" ng-submit="createNewProduct()">
-        <div class="col-auto">
-            <input type="text" class="form-control" id="newProductTitle" ng-model="newProduct.title" placeholder="Название">
-        </div>
-        <div class="col-auto">
-            <input type="number" class="form-control" id="newProductPrice" ng-model="newProduct.price" placeholder="Цена">
-        </div>
-        <div class="col-auto">
-            <button type="submit" class="btn btn-primary mb-3">Создать</button>
-        </div>
-    </form>
-    <p></p>
-    <h3>Корзина</h3>
-    <p></p>
-    <table class="table table-hover">
-        <thead>
-        <tr>
-            <td>ID</td>
-            <td>Название</td>
-            <td>Цена за 1 штуку</td>
-            <td>Количество штук</td>
-            <td>Цена</td>
-        </tr>
-        </thead>
-        <tbody>
-        <tr ng-repeat="i in cart.items">
-            <td>{{i.productId}}</td>
-            <td>{{i.productTitle}}</td>
-            <td>{{i.pricePerProduct}}</td>
-            <td>
-                <button class="btn btn-success" ng-click="addProductToShoppingCart(i.productId)">+</button>
-                {{i.quantity}}
-                <button class="btn btn-danger" ng-click="deleteProductFromShoppingCart(i.productId)">-</button>
-            </td>
-            <td>{{i.price}}</td>
-        </tr>
-        </tbody>
-    </table>
-    <p></p>
-    <button class="btn btn-primary" ng-click="clearShoppingCart()">Очистить корзину</button>
-    <button class="btn btn-primary" ng-click="createOrder()">Оформить заказ</button>
-    <p></p>
+    <script src="index.js"></script>
+    <script src="store/store.js"></script>
+    <script src="cart/cart.js"></script>
+    <script src="orders/orders.js"></script>
+    <script src="welcome/welcome.js"></script>
+    <script src="register/register.js"></script>
 </div>
 </body>
 </html>
